<resources>
    <string name="app_name">LES Inventory</string>

    <!--    Navigation drawer menu items    -->
    <string name="nav_open_drawer">Open Navigation Drawer</string>
    <string name="nav_close_drawer">Close Navigation Drawer</string>
    <string name="nav_item_list">Item List</string>
    <string name="nav_rfidscan">RFID Scan</string>
    <string name="nav_stocktaking">Stocktaking</string>
    <string name="nav_export">Export</string>

    <!--    Toolbar menu / dialog titles  -->
    <string name="title_new_item">New Item</string>
    <string name="title_new_instance">New Instance</string>
    <string name="title_new_category">New Category</string>
    <string name="title_new_brand">New Brand</string>
    <string name="title_new_location">New Location</string>
    <string name="title_rfid_scan">RFID Scan</string>
    <string name="title_edit_item">Edit Item</string>
    <string name="title_google_item">Google this item</string>
    <string name="title_stocktaking">Stocktaking</string>
    <string name="title_all_items_counted">All Items Counted</string>
    <string name="title_missing_items">Missing Items</string>
    <string name="save">Save</string>

    <!--    Hints for item attributes   -->
    <string name="hint_item_image">Item Image</string>
    <string name="hint_item_name">Item name</string>
    <string name="hint_item_description">Item description</string>
    <string name="hint_wait_for_connection">Waiting for Connection…</string>
    <string name="hint_search">Search</string>
    <string name="hint_name">Name</string>

    <!--    Headers for item attributes  -->
    <string name="header_name">Name</string>
    <string name="header_description">Description</string>
    <string name="header_brand">Brand</string>
    <string name="header_category">Category</string>
    <string name="header_rfid_tag">RFID Tag</string>
    <string name="header_location">Location</string>
    <string name="header_quantity">Quantity: %d</string>
    <string name="header_last_check_in">Last check-in</string>
    <string name="header_image">Image</string>

    <!--    Messages  -->
    <string name="warn_empty_item_name">Item name cannot be empty</string>
    <string name="warn_duplicate_item_name">Item name already exists</string>
    <string name="warn_empty_rfid">RFID tag cannot be empty</string>
    <string name="warn_duplicate_rfid">RFID tag already exists</string>
    <string name="toast_item_saved">Item Saved</string>
    <string name="toast_category_saved">Category Saved</string>
    <string name="toast_brand_saved">Brand Saved</string>
    <string name="toast_location_saved">Location Saved</string>
    <string name="toast_scan_item_instruction">Press scanner trigger to read RFID tag</string>
    <string name="toast_scanner_not_connected">RFID reader not connected</string>
    <string name="toast_unsupported_operation">Unsupported operation</string>
    <string name="toast_stocktaking_instruction">Press trigger once to start scanning. Press again to stop</string>
    <string name="error_camera_unavailable">Camera not available</string>
    <string name="error_no_record">No record in database</string>
    <string name="error_no_connection">RFID reader not connected</string>
    <string name="rfid_reader_connected">Connected to: %1$s</string>
    <string name="waiting_for_connection">Waiting for Connection…</string>
    <string name="warn_empty_name">Name cannot be empty</string>

    <!--    Content description for view elements   -->
    <string name="cd_item_list">Item List</string>
    <string name="cd_item_image">Item Image</string>
    <string name="cd_search_instances">Search Instances</string>
    <string name="cd_instance_list">Instance List</string>
    <string name="cd_new_instance">Add New Instance</string>
    <string name="cd_new_category">Add New Category</string>
    <string name="cd_new_brand">Add New Brand</string>
    <string name="cd_new_location">Add New Location</string>
    <string name="cd_rfid_tag">RFID tag</string>
    <string name="cd_location">Location</string>
    <string name="cd_last_check_in">Check-in time</string>
    <string name="cd_barcode">Barcode</string>
    <string name="cd_rfid_scan">RFID Scan</string>
    <string name="cd_edit_item">Edit Item</string>
    <string name="cd_save_item">Save Item</string>

    <!--    Button text     -->
    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="header_rfid">RFID</string>
    <string name="header_total_items">Total Items</string>
    <string name="default_number_0">0</string>
    <string name="button_start">Start</string>
    <string name="button_clear">Clear</string>
    <string name="button_reset">Reset</string>
    <string name="button_find_missing">Missing Items</string>
    <string name="button_select_image">Select Image</string>
    <string name="button_ok">OK</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_brands">Brands</string>
    <string name="nav_locations">Locations</string>
    <string name="nav_scan_item">Scan Item</string>


    <!--    <string name="add_item_type_title">New Item Type</string>-->
    <!--    <string name="checked_in">Checked-in</string>-->
    <!--    <string name="add_item_location_hint">Item location</string>-->
    <!--    <string name="add_item_barcode_hint">Barcode number</string>-->
    <!--    <string name="add_item_category_hint">Item category</string>-->
    <!--    <string name="item_image">Item image</string>-->
    <!--    <string name="item_category_header">Category: </string>-->
    <!--    <string name="item_location_header">Location: </string>-->
    <!--    <string name="item_barcode_header">Barcode: </string>-->
    <!--    <string name="add_item_quantity_hint">Item quantity</string>-->
    <!--    <string name="item_quantity_header">Quantity: </string>-->
    <!--    <string name="select_item_header">Item to add</string>-->
    <!--    <string name="add_instance_title">Add New Item</string>-->
    <!--    <string name="item_remarks_header">Remarks</string>-->
    <!--    <string name="scan_button">Scan Barcode</string>-->
    <!--    <string name="read_tag_header">RFID Tag UII</string>-->
    <!--    <string name="read_tag">Read Tag</string>-->
    <!--    <string name="item_rfid_header">RFID UII:</string>-->

</resources>