<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewItemActivity"
    tools:viewBindingIgnore="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <include
            layout="@layout/toolbar_main"
            android:id="@+id/toolbar" />
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ProgressBar
            android:id="@+id/loading_indicator"
            android:layout_width="@dimen/loading_indicator_size"
            android:layout_height="@dimen/loading_indicator_size"
            android:layout_gravity="center"
            android:visibility="invisible" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/item_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_image_height"
                    android:layout_marginHorizontal="@dimen/view_horizontal_margin_large"
                    android:contentDescription="@string/hint_item_image"
                    android:src="@drawable/baseline_photo_camera_black_24"
                    android:onClick="onClickAddImage"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/form_horizontal_margin"
                    android:layout_marginTop="@dimen/form_header_vertical_margin"
                    android:text="@string/header_category"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/item_image" />

                <Spinner
                    android:id="@+id/sp_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/form_horizontal_margin"
                    android:layout_marginTop="@dimen/form_spinner_vertical_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/form_horizontal_margin"
                    android:layout_marginTop="@dimen/form_header_vertical_margin"
                    android:text="@string/header_brand"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sp_category" />

                <Spinner
                    android:id="@+id/sp_brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/form_horizontal_margin"
                    android:layout_marginTop="@dimen/form_spinner_vertical_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="38dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="@dimen/form_horizontal_margin"
                    android:layout_marginTop="@dimen/form_header_vertical_margin"
                    android:text="@string/header_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sp_brand" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/form_horizontal_margin"
                    android:layout_marginEnd="@dimen/form_horizontal_margin"
                    android:hint="@string/hint_item_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/form_horizontal_margin"
                    android:layout_marginTop="@dimen/form_header_vertical_margin"
                    android:text="@string/header_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_name" />

                <EditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/form_horizontal_margin"
                    android:layout_marginEnd="@dimen/form_horizontal_margin"
                    android:hint="@string/hint_item_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>