<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="itemViewModel"
                  type="com.hku.lesinventory.viewmodel.ItemViewModel"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.NewInstanceActivity"
        tools:viewBindingIgnore="true">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
            <include
                layout="@layout/toolbar_main"
                android:id="@+id/toolbar" />
        </com.google.android.material.appbar.AppBarLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ProgressBar
                android:id="@+id/loading_indicator"
                android:layout_width="@dimen/loading_indicator_size"
                android:layout_height="@dimen/loading_indicator_size"
                android:layout_gravity="center"
                android:visibility="invisible" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/save_instance_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="@dimen/view_horizontal_margin_large"
                android:backgroundTint="?attr/colorPrimary"
                android:contentDescription="@string/cd_save_item"
                android:src="@drawable/ic_done_white_24dp" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nestedScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/item_image"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_image_height"
                        android:contentDescription="@string/cd_item_image"
                        android:scaleType="centerCrop"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/linearLayout5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/form_horizontal_margin"
                        android:layout_marginTop="@dimen/form_header_vertical_margin"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/item_image">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/header_name"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/brand_spinner" />

                        <TextView
                            android:id="@+id/item_brand_and_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/text_margin_large"
                            android:text="@{itemViewModel.itemBrand.name + ' ' + itemViewModel.item.name}"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/colorPrimary"
                            tools:text="Item brand + name" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/form_horizontal_margin"
                        android:layout_marginTop="@dimen/form_header_vertical_margin"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/header_description"/>

                        <TextView
                            android:id="@+id/item_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/text_margin_large"
                            android:text="@{itemViewModel.item.description}"
                            android:textColor="@color/colorPrimary"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            tools:text="Item description"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/form_horizontal_margin"
                        android:layout_marginTop="@dimen/form_header_vertical_margin"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/header_category" />

                        <TextView
                            android:id="@+id/item_category"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/text_margin_large"
                            android:text="@{itemViewModel.itemCategory.name}"
                            android:textColor="@color/colorPrimary"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            tools:text="Item category" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/form_horizontal_margin"
                        android:layout_marginTop="@dimen/form_header_vertical_margin_large"
                        android:text="@string/header_location"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />

                    <Spinner
                        android:id="@+id/location_spinner"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/form_horizontal_margin"
                        android:layout_marginTop="@dimen/form_spinner_vertical_margin"
                        app:layout_constraintEnd_toStartOf="@+id/add_location_button"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView6" />

                    <ImageButton
                        android:id="@+id/add_location_button"
                        android:layout_width="@dimen/image_button_size"
                        android:layout_height="@dimen/image_button_size"
                        android:layout_marginEnd="@dimen/view_horizontal_margin_small"
                        android:background="@null"
                        android:contentDescription="@string/cd_new_location"
                        android:src="@drawable/baseline_playlist_add_black_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView6" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/form_horizontal_margin"
                        android:layout_marginTop="@dimen/form_header_vertical_margin"
                        android:text="@string/header_rfid_tag"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/location_spinner" />

                    <EditText
                        android:id="@+id/rfid_edittext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/form_horizontal_margin"
                        android:hint="@string/hint_wait_for_connection"
                        android:focusable="true"
                        app:layout_constraintEnd_toStartOf="@+id/rfid_scan_button"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView5" />

                    <ImageButton
                        android:id="@+id/rfid_scan_button"
                        android:layout_width="@dimen/image_button_size"
                        android:layout_height="@dimen/image_button_size"
                        android:layout_marginEnd="@dimen/view_horizontal_margin_small"
                        android:background="@null"
                        android:contentDescription="@string/cd_rfid_scan"
                        android:src="@drawable/baseline_qr_code_scanner_black_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView5" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>
        </FrameLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>